--- a/src/main/resources/jdbc-druid-config.properties
+++ b/src/main/resources/jdbc-druid-config.properties
@@ -1,7 +1,7 @@
 # database configure
 jdbc.url=jdbc:mysql://127.0.0.1:3306/teach_sys?useUnicode=true&characterEncoding=utf8&autoReconnect=true
 jdbc.username=root
-jdbc.password=root
+jdbc.password=ysh09-04
 
 # druid datasource
 druid.initialSize=10
